--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,11 @@
 <h1>Login</h1>
-<form action="/login" method="POST">
+<form action="/auth/login" method="POST">
   <div>
-    <label for="companyName">companyName</label>
-    <input type="companyName" id="companyName" name="companyName" required>
+    <label for="username">Username:</label>
+    <input type="username" id="username" name="username" required>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
   </div>
   <button type="submit">Login</button>
 </form>
