--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -1,3 +1,3 @@
-<form action="/logout" method="POST">
+<form action="/auth/logout" method="POST">
   <button type="submit">Log Out</button>
 </form>
