--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,25 +1,102 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Register</h1>
-    <form action="/auth/register" method="POST">
-      <div>
-        <label for="username">Username:</label>
-        <input type="username" id="username" name="username" required>
+    <style>
+      .gradient-custom {
+/* fallback for old browsers */
+background: #f093fb;
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+/* Chrome 10-25, Safari 5.1-6 */
+background: -webkit-linear-gradient(to bottom right, rgb(255, 255, 255), rgb(0, 0, 255));
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(0, 0, 255))
+}
 
-        <label for="organization">Organization:</label>
-        <input type="organization" id="organization" name="organization" required>
+.card-registration .select-input.form-control[readonly]:not([disabled]) {
+font-size: 1rem;
+line-height: 2.15;
+padding-left: .75em;
+padding-right: .75em;
+}
+.card-registration .select-arrow {
+top: 13px;
+}
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <section class="vh-100 gradient-custom">
+      <div class="container py-5 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="col-12 col-lg-9 col-xl-7">
+            <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+              <div class="card-body p-4 p-md-5">
+                <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Registration</h3>
+
+                <form action="/auth/register" method="POST">
+    
+                  <div class="row">
+                    <div class="col-md-6 mb-4">
+    
+                      <div class="form-outline">
+
+                        <input type="text" id="username" name="username" class="form-control form-control-lg" />
+                        <label class="form-label"  for="username">Username</label>
+                      </div>
+    
+                    </div>
+                    <div class="col-md-6 mb-4">
+    
+                      <div class="form-outline">
+                        <input type="text" id="organization" name="organization" class="form-control form-control-lg" />
+                        <label class="form-label" for="organization">Organization</label>
+                      </div>
+    
+                    </div>
+                  </div>
+    
+                  <div class="row">
+                    <div class="col-md-6 mb-4 d-flex align-items-center">
+    
+                      <div class="form-outline datepicker w-100">
+                        <input type="password" class="form-control form-control-lg" id="password" name="password" />
+                        <label for="password" class="form-label">Password</label>
+                      </div>
+    
+                    </div>
+                    <div class="col-md-6 mb-4">
+
+    
+                    </div>
+                  </div>
+    
+                  <div class="row">
+                    <div class="col-md-6 mb-4 pb-2">
+    
+                      <div class="form-outline">
+                        <input type="email" id="email" name="email" class="form-control form-control-lg" />
+                        <label class="form-label" for="email">Email</label>
+                      </div>
+    
+                    </div>
+                    <div class="col-md-6 mb-4 pb-2">
+
+    
+                    </div>
+                  </div>
+    
+                  <div class="mt-4 pt-2">
+                    <input class="btn btn-primary btn-lg" type="submit" />
+                  </div>
+    
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <button type="submit">Register</button>
-    </form>
-  </body>
+    </section>
+</body>
 </html>
